--- a/multiagent-pattern/Product_searcher.ipynb
+++ b/multiagent-pattern/Product_searcher.ipynb
@@ -1,34 +1,20 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
       "execution_count": 9,
       "metadata": {
-        "id": "hdUGopmgu5ny",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "collapsed": true,
+        "id": "hdUGopmgu5ny",
         "outputId": "0a31df90-79e6-4bcd-b6bc-3202c211894a"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m7.7/7.7 MB\u001b[0m \u001b[31m38.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m583.5/583.5 kB\u001b[0m \u001b[31m11.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
@@ -43,24 +29,29 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
       "metadata": {
         "id": "ix4tB_Ri7Yiq"
-      }
+      },
+      "source": []
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip install -qU tavily-python scrapegraph-py"
-      ],
+      "execution_count": 10,
       "metadata": {
         "id": "0XXChMRL9OvI"
       },
-      "execution_count": 10,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "!pip install -qU tavily-python scrapegraph-py"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 11,
+      "metadata": {
+        "id": "-3hAOYc9vt7g"
+      },
+      "outputs": [],
       "source": [
         "from crewai import Agent, Task, Crew, Process, LLM\n",
         "from crewai.tools import tool\n",
@@ -74,15 +65,15 @@
         "\n",
         "import os\n",
         "import json"
-      ],
-      "metadata": {
-        "id": "-3hAOYc9vt7g"
-      },
-      "execution_count": 11,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 12,
+      "metadata": {
+        "id": "-pnTwyUBxoF5"
+      },
+      "outputs": [],
       "source": [
         "# please register Agentops account then go to\n",
         "# (https://app.agentops.ai/get-started)\n",
@@ -96,31 +87,24 @@
         "    skip_auto_end_session=True,\n",
         "    default_tags=['crewai']\n",
         ")"
-      ],
-      "metadata": {
-        "id": "-pnTwyUBxoF5"
-      },
-      "execution_count": 12,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# from google.colab import userdata\n",
-        "# userdata.get('secretName')"
-      ],
+      "execution_count": 13,
       "metadata": {
         "collapsed": true,
         "id": "XH_wbQBzIjgA"
       },
-      "execution_count": 13,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# from google.colab import userdata\n",
+        "# userdata.get('secretName')"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "print(agentops.get_client().config.exporter_endpoint)"
-      ],
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -128,22 +112,22 @@
         "id": "0agMrsKDgYYr",
         "outputId": "64f07c84-505a-4c3b-b0ed-837f13842f3b"
       },
-      "execution_count": 14,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "https://otlp.agentops.ai/v1/traces\n"
           ]
         }
+      ],
+      "source": [
+        "print(agentops.get_client().config.exporter_endpoint)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!python --version"
-      ],
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -151,19 +135,26 @@
         "id": "8433OA_TU8fO",
         "outputId": "fcdfdc94-bebe-4dfa-9f29-ba3bfcd56d97"
       },
-      "execution_count": 15,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Python 3.11.12\n"
           ]
         }
+      ],
+      "source": [
+        "!python --version"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 16,
+      "metadata": {
+        "id": "uu075ybyy1WI"
+      },
+      "outputs": [],
       "source": [
         "output_dir = \"./ai-agent-output\"\n",
         "os.makedirs(output_dir, exist_ok=True)\n",
@@ -171,18 +162,11 @@
         "basic_llm = LLM(model=\"cohere/command-a-03-2025\", temperature=0.2)\n",
         "search_client = TavilyClient(api_key=userdata.get('tvly-search'))\n",
         "scrape_client = Client(api_key=userdata.get('scrapegraph'))"
-      ],
-      "metadata": {
-        "id": "uu075ybyy1WI"
-      },
-      "execution_count": 16,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "basic_llm"
-      ],
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -190,29 +174,25 @@
         "id": "6uSXIKfcSieO",
         "outputId": "55e34548-bd78-4af9-9e8a-be1f2f557e60"
       },
-      "execution_count": 17,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "<crewai.llm.LLM at 0x79f6301c0290>"
             ]
           },
+          "execution_count": 17,
           "metadata": {},
-          "execution_count": 17
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "basic_llm"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "response = basic_llm.call(\n",
-        "    \"Analyze the following messages and return the name, age, and breed. \"\n",
-        "    \"Meet Kona! She is 3 years old and is a black german shepherd.\"\n",
-        ")\n",
-        "print(response)\n"
-      ],
+      "execution_count": 18,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -220,11 +200,10 @@
         "id": "_2Icys3MNuwg",
         "outputId": "c1032bba-b172-4f8e-ec6c-c0d40a35c708"
       },
-      "execution_count": 18,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Based on the provided message, here are the extracted details:\n",
             "\n",
@@ -233,10 +212,22 @@
             "- **Breed**: Black German Shepherd\n"
           ]
         }
+      ],
+      "source": [
+        "response = basic_llm.call(\n",
+        "    \"Analyze the following messages and return the name, age, and breed. \"\n",
+        "    \"Meet Kona! She is 3 years old and is a black german shepherd.\"\n",
+        ")\n",
+        "print(response)\n"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 19,
+      "metadata": {
+        "id": "sMLstJBK4kex"
+      },
+      "outputs": [],
       "source": [
         "no_keywords = 10\n",
         "\n",
@@ -245,33 +236,33 @@
         "company_context = StringKnowledgeSource(\n",
         "    content=about_company\n",
         ")"
-      ],
-      "metadata": {
-        "id": "sMLstJBK4kex"
-      },
-      "execution_count": 19,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Setup Agents"
-      ],
       "metadata": {
         "id": "KEeJqY2pznkZ"
-      }
+      },
+      "source": [
+        "## Setup Agents"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Agent: A"
-      ],
       "metadata": {
         "id": "qVAf4lJ28MbD"
-      }
+      },
+      "source": [
+        "### Agent: A"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 55,
+      "metadata": {
+        "id": "u0SavghHzpEV"
+      },
+      "outputs": [],
       "source": [
         "class SuggestedSearchQueries(BaseModel):\n",
         "    queries: List[str] = Field(..., title=\"Suggested search queries to be passed to the search engine\",\n",
@@ -306,24 +297,24 @@
         "    output_file=os.path.join(output_dir, \"step_1_suggested_search_queries.json\"),\n",
         "    agent=search_queries_recommendation_agent\n",
         ")"
-      ],
-      "metadata": {
-        "id": "u0SavghHzpEV"
-      },
-      "execution_count": 55,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Agent: B"
-      ],
       "metadata": {
         "id": "ecrSUPhT-HmZ"
-      }
+      },
+      "source": [
+        "### Agent: B"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 56,
+      "metadata": {
+        "id": "xXtf-roZ-Jvz"
+      },
+      "outputs": [],
       "source": [
         "class SignleSearchResult(BaseModel):\n",
         "    title: str\n",
@@ -363,24 +354,24 @@
         "    output_file=os.path.join(output_dir, \"step_2_search_results.json\"),\n",
         "    agent=search_engine_agent\n",
         ")"
-      ],
-      "metadata": {
-        "id": "xXtf-roZ-Jvz"
-      },
-      "execution_count": 56,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Agent: C"
-      ],
       "metadata": {
         "id": "DMjVBFl6YfFC"
-      }
+      },
+      "source": [
+        "### Agent: C"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 57,
+      "metadata": {
+        "id": "Ejr-C8p2YgxT"
+      },
+      "outputs": [],
       "source": [
         "class ProductSpec(BaseModel):\n",
         "    specification_name: str\n",
@@ -447,25 +438,25 @@
         "    output_file=os.path.join(output_dir, \"step_3_search_results.json\"),\n",
         "    agent=scraping_agent\n",
         ")"
-      ],
-      "metadata": {
-        "id": "Ejr-C8p2YgxT"
-      },
-      "execution_count": 57,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "MMQjc8eHgQd0"
+      },
       "source": [
         "\n",
         "### Agent: D"
-      ],
-      "metadata": {
-        "id": "MMQjc8eHgQd0"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 58,
+      "metadata": {
+        "id": "joLe-Mr3gSNs"
+      },
+      "outputs": [],
       "source": [
         "procurement_report_author_agent = Agent(\n",
         "    role=\"Procurement Report Author Agent\",\n",
@@ -496,25 +487,25 @@
         "    output_file=os.path.join(output_dir, \"step_4_procurement_report.html\"),\n",
         "    agent=procurement_report_author_agent,\n",
         ")"
-      ],
-      "metadata": {
-        "id": "joLe-Mr3gSNs"
-      },
-      "execution_count": 58,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "zr1HP2GTiH9k"
+      },
       "source": [
         "\n",
         "### Agent: E"
-      ],
-      "metadata": {
-        "id": "zr1HP2GTiH9k"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 59,
+      "metadata": {
+        "id": "b3ROpDZyiG_6"
+      },
+      "outputs": [],
       "source": [
         "Verfier_report_author_agent = Agent(\n",
         "    role=\"Verfier for Report Agent\",\n",
@@ -535,24 +526,24 @@
         "    output_file=os.path.join(output_dir, \"step_5_enhanced_report.html\"),\n",
         "    agent=Verfier_report_author_agent,\n",
         ")"
-      ],
-      "metadata": {
-        "id": "b3ROpDZyiG_6"
-      },
-      "execution_count": 59,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Run the AI Crew"
-      ],
       "metadata": {
         "id": "JObrx_tu5mGd"
-      }
+      },
+      "source": [
+        "## Run the AI Crew"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 60,
+      "metadata": {
+        "id": "nFYBBb1W5oVp"
+      },
+      "outputs": [],
       "source": [
         "rankyx_crew = Crew(\n",
         "    agents=[\n",
@@ -574,40 +565,22 @@
         "    planning=True,\n",
         "    planning_llm=basic_llm\n",
         ")"
-      ],
-      "metadata": {
-        "id": "nFYBBb1W5oVp"
-      },
-      "execution_count": 60,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "crew_results = rankyx_crew.kickoff(\n",
-        "    inputs={\n",
-        "        \"product_name\": \"small cross bag for men not from brand , waterproof not leather and less than 500 EGP \",\n",
-        "        \"websites_list\": [\"www.amazon.eg\", \"www.jumia.com.eg\", \"www.noon.com/egypt-en\"],\n",
-        "        \"country_name\": \"Egypt\",\n",
-        "        \"no_keywords\": 10,\n",
-        "        \"language\": \"English\",\n",
-        "        \"score_th\": 0.10,\n",
-        "        \"top_recommendations_no\": 10\n",
-        "    }\n",
-        ")"
-      ],
+      "execution_count": 61,
       "metadata": {
-        "id": "gcQw4kcn6Gnj",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "gcQw4kcn6Gnj",
         "outputId": "68dc4496-25b8-4dca-c9a0-48fc17fc6f33"
       },
-      "execution_count": 61,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\u001b[1m\u001b[95m# Agent:\u001b[00m \u001b[1m\u001b[92mSearch Queries Recommendation Agent\u001b[00m\n",
             "\u001b[95m## Task:\u001b[00m \u001b[92mRankyx is looking to buy small cross bag for men not from brand , waterproof not leather and less than 500 EGP  at the best prices (value for a price strategy) and best ratings\n",
@@ -1349,7 +1322,34 @@
             "\n"
           ]
         }
+      ],
+      "source": [
+        "crew_results = rankyx_crew.kickoff(\n",
+        "    inputs={\n",
+        "        \"product_name\": \"small cross bag for men not from brand , waterproof not leather and less than 500 EGP \",\n",
+        "        \"websites_list\": [\"www.amazon.eg\", \"www.jumia.com.eg\", \"www.noon.com/egypt-en\"],\n",
+        "        \"country_name\": \"Egypt\",\n",
+        "        \"no_keywords\": 10,\n",
+        "        \"language\": \"English\",\n",
+        "        \"score_th\": 0.10,\n",
+        "        \"top_recommendations_no\": 10\n",
+        "    }\n",
+        ")"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
